# geo_autocomplete

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  NOTICE.md  README.md  cities_index.csv  cities_index_with_ru.csv  demo.ipynb  pyproject.toml
.github/workflows/: test.yml
examples/: README.md  custom_catalog.py
examples/dsml/: README.md
examples/hspace/: README.md
input/: dsml_translations_ru.csv  hspace_translation_overrides_ru.csv
input/ror_data/: README.md
recipes/supabase/: README.md  university_index.sql
scripts/: build_dsml_index.py  build_hspace_index.py  build_university_index.py  build_university_seed_sql.py
src/geo_autocomplete_internal/: __init__.py  cli.py  dsml.py  hspace.py  io.py  models.py  ror.py  universities.py
src/stateless_autocomplete/: __init__.py  core.py
tests/: test_core.py  test_dsml.py  test_examples_and_recipes.py  test_hspace.py  test_universities.py
tests/fixtures/: ror_sample.json
