[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "geo-autocomplete-index"
version = "1.0.0"
description = "Reproducible DSML and HSpace city autocomplete indexes"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["autocomplete", "cities", "geodata", "ranking"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.urls]
Repository = "https://github.com/sneddy/geo_autocomplete"
Issues = "https://github.com/sneddy/geo_autocomplete/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
