[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stateless-autocomplete"
version = "2.0.0"
description = "Deterministic stateless autocomplete with reproducible city and ROR adapters"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["autocomplete", "search", "ranking", "cities", "universities", "ror"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.urls]
Repository = "https://github.com/sneddy/geo_autocomplete"
Issues = "https://github.com/sneddy/geo_autocomplete/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
